--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "17.0.2",
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "17.0.2",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "sweetalert2": "^11.4.14",
+    "sweetalert2-react-content": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
